--- a/StayWatchBeaconiOS/Info.plist
+++ b/StayWatchBeaconiOS/Info.plist
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>CFBundleDocumentTypes</key>
-        <array>
-            <dict/>
-        </array>
-        <key>NSBluetoothAlwaysUsageDescription</key>
-        <string>Bluetoothを使用します</string>
-        <key>UIBackgroundModes</key>
-        <array>
-            <string>バックグラウンドでbluetooth-centralを行います</string>
-            <string>バックグラウンドでbluetooth-peripheralを行います</string>
-        </array>
-    </dict>
+<dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.togawakouta.StayWatchBeaconiOS.appRefresh</string>
+		<string>com.togawakouta.StayWatchBeaconiOS.fetchRemoteData</string>
+	</array>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict/>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>バックグラウンドでbluetooth-centralを行います</string>
+		<string>バックグラウンドでbluetooth-peripheralを行います</string>
+	</array>
+</dict>
 </plist>
