--- a/StayWatchBeaconiOS/Info.plist
+++ b/StayWatchBeaconiOS/Info.plist
@@ -11,6 +11,17 @@
 	<array>
 		<dict/>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.768306004606-5d4fo02d3t9ckp689655057to67iucrb</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
