--- a/StayWatchBeaconiOS/Info.plist
+++ b/StayWatchBeaconiOS/Info.plist
@@ -17,6 +17,8 @@
 			</array>
 		</dict>
 	</array>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+        <string>Bluetoothを使用します</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
