--- a/StayWatchBeaconiOS/Info.plist
+++ b/StayWatchBeaconiOS/Info.plist
@@ -17,6 +17,8 @@
 			</array>
 		</dict>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string>滞在ビーコン</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
